# RAG-Tutorials

output/: _pdf_contents.json  _pdf_listing.txt  ai_rename_log.csv  ai_rename_map.json  metadata.csv  rai_metadata.csv  rename_log.csv  scraper_report.md
output/text/: 10_4_The_Punjab_Payment_of_Wages_Procedure_Rules_1965.txt  4_Prohibition_on_servingsale_of_Non-_vegetarian_dishes_within_10_km_radius_of_Ai_webpage.txt  AP_Retail_Trade_Policy_2015_2020.txt  AP_Shops_Establishments_365_Days_Exemption_2016.txt  Action_taken_as_per_members_request_to_seek_parity_between_Brick-and-Mortar_and__webpage.txt  BIS_Bureau_Indian_Standards_Website_Content.txt  Bijou_Kurien_takes_over_as_Chairman_Kulin_Lalbhai_as_the_Vice_Chairman_of_the_Re_webpage.txt  CENTRAL_CONSUMER_PROTECTION_AUTHORITY.txt  CGST_Second_Amendment_Rules_2019.txt  Competition_Act_2002_as_amended_2023.txt  Compliance_Handbook_for.txt  DIGITAL_PERSONAL_DATA_PROTECTION_ACT_2023.txt  DIPP_Boiler_Prohibition_Residential_Hotels_Malls_2016.txt  DPDP_Rules_2025_Notified_3.txt  Delhi_HC_Minimum_Wages_Multiple_Petitions_2018.txt  ECLGS_Operational_Guidelines.txt  ESSENTIAL_COMMODITIES_ACT_1955.txt  Employees_Provident_Fund_Act_1952.txt  FSSAI_10_Golden_Rules_Safe_Food_Retail_Poster.txt  FSSAI_Revamp_Licensing_Registration_Regulations_2018.txt  FSSAI_appeal_to_include_Category_8_and_9_in_FSSAI_License_for_retailtrade_of_pre_webpage.txt  (+125 more)
rai-rag/: main.py  pyproject.toml  rag.ipynb  requirements.txt
scrapers/: ai_rename.py  list_pdfs.py  post_scraper_tasks.py  rai_scraper.py  retail_govt_doc_scraper.py
